err/enpraxis.wordpressexchange.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/enpraxis'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/browser'...
Compiling './lib/python3.5/site-packages/enpraxis/wordpressexchange/browser/wordpresslib.py'...
***   File "./lib/python3.5/site-packages/enpraxis/wordpressexchange/browser/wordpresslib.py", line 81
    except xmlrpclib.Fault, fault:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/enpraxis/wordpressexchange/browser/wpexportform.py'...
***   File "./lib/python3.5/site-packages/enpraxis/wordpressexchange/browser/wpexportform.py", line 124
    except WordPressException, fault:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/enpraxis/wordpressexchange/browser/wpimportform.py'...
***   File "./lib/python3.5/site-packages/enpraxis/wordpressexchange/browser/wpimportform.py", line 129
    except WordPressException, fault:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/docs'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/docs/images'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/docs/src'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/af'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/af/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ar'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ar/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/bn'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/bn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ca'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/de'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/en'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/es'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/fr'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/hi'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/hi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/hu'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/hu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/it'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ja'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ko'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ne'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ne/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/nl'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/pt'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/pt-br'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/pt-br/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ru'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/tr'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/vi'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/vi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/zh'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/zh/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/zh-cn'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/zh-cn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/zh-hk'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/zh-hk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/zh-tw'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/locales/zh-tw/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/profiles'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/profiles/default'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/skins'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/skins/wordpressexchange'...
Listing './lib/python3.5/site-packages/enpraxis/wordpressexchange/tests'...
Listing './lib/python3.5/site-packages/enpraxis.wordpressexchange-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
